# haycut

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT_ARCHITECTURE_PHASES_1_3.md  Cargo.toml  Makefile  README.md  build.rs  haycut.toml  plan.md  plan_1_typed_actions_and_loop.md  plan_2_engine_and_persistence.md  plan_3_safety_and_execution.md  plan_4_patch_and_verification.md
.github/workflows/: ci.yml
evals/cases/select_context_ignores_distractors_rs/repo/: Cargo.toml
evals/cases/split_context_off_by_one_rs/: case.toml
evals/cases/sum_wrong_assertion_py/: case.toml
evals/cases/sum_wrong_assertion_py/repo/: test_sum.py
evals/cases/sum_wrong_assertion_rs/: case.toml
evals/cases/sum_wrong_assertion_rs/repo/: Cargo.toml
fixtures/outputs/: node_vitest_failure.stdout  python_pytest_failure.stdout  rust_compile_error.stderr  rust_test_failure.stderr
src/: budget.rs  cli.rs  code_context.rs  code_graph.rs  compactor.rs  config.rs  evidence.rs  extract.rs  main.rs  model.rs  project_path.rs  store.rs  symbols.rs  util.rs
src/commands/: agent.rs  eval.rs  files.rs  index.rs  init.rs  mod.rs  packet.rs  read_symbol.rs  read_window.rs  report.rs  run_context.rs  runs.rs  search.rs  suggest.rs  task.rs  trace.rs  tui.rs
src/commands/agent/: command_policy.rs  engine.rs  patch.rs  policy.rs  primitive.rs  session.rs  workflow.rs  workflow_spec.rs
src/commands/snapshots/: haycut__commands__packet__tests__rust_failure_packet.snap
src/commands/tui/: app.rs  demo.rs  editor.rs  model.rs  runtime.rs  view.rs
src/commands/view/: mod.rs  model.rs  sources.rs
src/context/: adapters.rs  artifact.rs  comparison.rs  compiler.rs  digest.rs  invocation.rs  mod.rs  request.rs
src/prompts/: planner_system.txt  planner_user.jinja
src/snapshots/: haycut__evidence__tests__evidence_compile_error.snap  haycut__evidence__tests__evidence_test_failure.snap
(+11 files in other folders)
