[package]
name = "haycut"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = "1.2.4"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.120"
toml = "1.1.2"
uuid = { version = "1.10.0", features = ["v4"] }
