[package]
name = "haycut"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
blake3 = "1.8.2"
camino = "1.2.4"
ureq = { version = "3.3.0", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
ignore = "0.4"
libc = "0.2"
minijinja = "2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.120"
toml = "1.1.2"
tree-sitter = "0.26.10"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23"
uuid = { version = "1.10.0", features = ["v4"] }
tiny_http = "0.12.0"
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"

[features]
test-utils = []

[dev-dependencies]
insta = { version = "1", features = ["json"] }
